# lattice-db

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  dev.sh
.github/workflows/: publish-clients.yml  release.yml
deploy/: deploy-local.sh  kind-config.yaml  nats.yaml  workloaddeployment-public.yaml  workloaddeployment.yaml
lattice-db-client/: Cargo.toml  README.md
lattice-db-client/examples/: bench.rs  smoke_test.rs
lattice-db-client/src/: lib.rs
lattice-sql/: Cargo.toml
lattice-sql-client/: Cargo.toml  README.md
lattice-sql-client/examples/: smoke_test.rs
lattice-sql-client/src/: lib.rs
lattice-sql/src/: catalog.rs  executor.rs  handler.rs  join.rs  main.rs  parser.rs  planner.rs
storage-service/: Cargo.toml
storage-service/.cargo/: config.toml
storage-service/src/: handler.rs  log.rs  main.rs  state.rs  store.rs  tcp_server.rs  tests.rs  txn.rs
storage-service/wit/: world.wit
tests/: bench.sh  integration.sh  integration_multitenant.sh  integration_partitioned.sh  integration_sql.sh
