[package]
name = "lattice-db-client"
version = "1.6.2"
edition = "2021"
description = "Typed Rust client SDK for lattice-db — wraps the NATS request/reply protocol"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Taika-3D-Oy/lattice-db"
keywords = ["lattice-db", "nats", "wasi", "wasip3", "database"]
categories = ["database", "wasm"]
authors = ["Taika 3D Oy"]
rust-version = "1.85"
autobins = false

[dependencies]
nats-wasi = { package = "nats-wasip3", version = "0.8.2" }
wasip3 = "0.5"
wit-bindgen = { version = "0.54", default-features = false, features = ["async", "async-spawn", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }

[[example]]
name = "smoke_test"
crate-type = ["cdylib"]

[[example]]
name = "bench"
crate-type = ["cdylib"]
