[package]
name = "storage-service"
version = "1.6.6"
edition = "2021"
description = "Self-contained distributed database service — connects to NATS, serves requests, persists to KV"
license = "Apache-2.0"
autobins = false

[lib]
name = "storage_service"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
nats-wasi = { package = "nats-wasip3", version = "0.9.1" }
wasip3 = "0.5"
wit-bindgen = { version = "0.54", default-features = false, features = ["async", "async-spawn", "macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
